# checo_avr

./: CMakeLists.txt  CMakePresets.json  avr-toolchain.cmake
app/seven_segment_driver/: CMakeLists.txt
app/seven_segment_driver/simulation/: simulation.sim1
app/seven_segment_driver/src/: main.cpp
lib/checo_avr/: CMakeLists.txt
lib/checo_avr/include/checo/avr/: avr.h  spi.h
